# nexcore-renderer

./: .integrity-report.json  Cargo.toml  README.md
src/: app.rs  bridge.rs  debug_server.rs  grounding.rs  input.rs  lib.rs  main.rs  nvos_desktop.rs  scroll.rs  state.rs  text.rs  visual_primitives.rs  window.rs
src/chrome/: mod.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toolbar.rs
src/content/: form.rs  mod.rs
src/dom/: mod.rs
src/gpu/: backend.rs  blit_shader.wgsl  gpu_text.rs  mod.rs  shader.wgsl  text_shader.wgsl  vello_renderer.rs
src/grounded/: confidence.rs  experience.rs  hypothesis.rs  mod.rs
src/layout/: mod.rs
src/net/: adventure.rs  mod.rs
src/paint/: image.rs  mod.rs
src/panels/: brain_viewer.rs  cloud_dashboard.rs  experience_store.rs  grounded_monitor.rs  guardian_monitor.rs  hypothesis_queue.rs  mcp_explorer.rs  mod.rs  signal_dashboard.rs
src/style/: cascade.rs  mod.rs  parse.rs  selector.rs
tests/: integration.rs
tests/visual/: visual-regression.sh
tests/visual/fixtures/: 01-basic-text.html  02-box-model.html  03-nested-layout.html  04-image-embed.html  05-color-grid.html  06-flex-layout.html  07-borders-text.html  08-semantic-html.html
